target_os = "android"
target_cpu = "arm64"
android_channel = "stable"
is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 1
fieldtrial_testing_like_official_build = true
ffmpeg_branding = "Chrome"
proprietary_codecs = true
is_cfi = true
enable_gvr_services = false
enable_remoting = false
enable_reporting = true
dfmify_dev_ui=false
disable_autofill_assistant_dfm=true
disable_tab_ui_dfm=true
